[package]
edition = "2021"
name = "craft-burn"
version = "0.1.0"

[features]
import = ["burn-import"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", commit = "fb05a55d71e063b72eabe35d5c7b703be190d420", default-features = false }
burn-import = { git = "https://github.com/tracel-ai/burn.git", commit = "fb05a55d71e063b72eabe35d5c7b703be190d420", default-features = false, features = [
    "pytorch",
], optional = true }

float-ord = "0.3"
half = "2"
image = "0.25"
imageproc = "0.25"
rayon = "1"


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies.burn]
commit = "fb05a55d71e063b72eabe35d5c7b703be190d420"
features = ["wgpu", "cuda-jit", "wgpu-spirv", "tch"]
git = "https://github.com/tracel-ai/burn.git"
# path = "../burn/crates/burn"

[[example]]
name = "craft-test"
