[package]
edition = "2021"
name = "craft-burn"
version = "0.1.0"

[features]
default = ["import"]
import = ["burn-import"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "a0e8e4d1e977304ecde759aaa48975d5309a1133", default-features = false }
burn-import = { git = "https://github.com/tracel-ai/burn.git", rev = "a0e8e4d1e977304ecde759aaa48975d5309a1133", default-features = false, features = [
    "pytorch",
], optional = true }

float-ord = "0.3"
half = "2"
image = "0.25"
imageproc = "0.25"
rayon = "1"


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies.burn]
features = ["wgpu", "cuda-jit", "wgpu-spirv", "tch"]
git = "https://github.com/tracel-ai/burn.git"
rev = "a0e8e4d1e977304ecde759aaa48975d5309a1133"

[[example]]
name = "craft-test"
